--- a/templates/dnd5e/bio.hbs
+++ b/templates/dnd5e/bio.hbs
@@ -11,7 +11,7 @@
 	<h4 class="attribute-name source">{{ localize "DND5E.Source" }}:</h4>
 	<span contenteditable="{{flags.editing}}" data-field-key="data.details.source"
 		placeholder="{{ localize 'DND5E.Source' }}">{{data.details.source}}</span>
-	<h2 class="section-header">{{ localize "DND5E.Biography" }}</h2>
+	<h2 class="section-header" style="margin-top: 2.5em;">{{ localize "DND5E.Biography" }}</h2>
 	<section class="biography active">
 		{{editor content=data.details.biography.value target="data.details.biography.value" button=(and owner flags.editing) owner=owner editable=flags.editing}}
 	</section>
